[tool.poetry]
name = "gyeol-openclaw-server"
version = "2.0.0"
description = "GYEOL OpenClaw Autonomous Agent Server"
authors = ["GYEOL Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
httpx = "^0.28.0"
apscheduler = "^3.10.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
